Fix gap in AnimePage

--- a/src/app/pages/AnimePage/AnimePage.module.scss
+++ b/src/app/pages/AnimePage/AnimePage.module.scss
@@ -38,9 +38,10 @@
 
 		.anime_info_right {
 			width: 100%;
+			height: 100%;
 			display: flex;
 			flex-direction: column;
-			gap: var(--gap);
+			gap: var(--gap-2);
 
 			.user_selects {
 				width: 100%;
